# learn_opengl

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt
code/basic_opengl/: CMakeLists.txt
code/basic_opengl/inc/basic_opengl/: basic_opengl_main.h
code/basic_opengl/src/: basic_opengl_main.c
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glfw3/: CMakeLists.txt
